# smtp-dump

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  deploy.yml  rustfmt.toml
examples/: test_sample.rs
src/: doc.rs  email_update.rs  git.rs  lib.rs  main.rs
tests/: doc_fetch_consistency.rs
tests/emails/: GOV.UK daily update.eml  GOV.UK single update 2021.eml  GOV.UK single update.eml  new-email-format.html
tests/govuk/change-name-deed-poll/: make-an-adult-deed-poll.html
tests/govuk/government/consultations/: bus-services-act-2017-bus-open-data.html
