[package]
name = "smtp-dump"
description = "Receive-only SMTP server which saves every email that is sent to it"
categories = ["network-programming", "email"]
keywords = ["smtp"]
version = "0.1.0"
authors = ["Mike Bush <platy@njk.onl>"]
edition = "2018"

[dependencies]
chrono = "0.4.19"
mailin = "0.5.0"
anyhow = "1.0.33"
file-lock = "1.1.20"
async-io = "1.6.0"
futures-lite = "1.12.0"
temp-file = "0.1.6"

[dev-dependencies]
pretty_assertions = "0.6.1"
lettre = "0.9"
lettre_email = "0.9"
