[package]
name = "smtp-dump"
description = "Receive-only SMTP server which saves every email that is sent to it"
license = "Apache-2.0"
repository = "https://github.com/platy/smtp-dump"
categories = ["network-programming", "email"]
keywords = ["smtp"]
version = "0.1.0"
authors = ["Mike Bush <platy@njk.onl>"]
edition = "2018"

[dependencies]
chrono = "0.4.19"
mailin = "0.5.0"
anyhow = "1.0.33"
async-io = "1.6.0"
futures-lite = "1.12.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
lettre = "0.9"
lettre_email = "0.9"
